# aws_sso_autosign

./: .gitignore  README.md  aws_configure.py  config-sample.yaml  get_otp.py  params_parser.py  pyproject.toml  sso_setting.py  sso_sign.py
