[tool.poetry]
name = "web_cron"
version = "0.1.0"
description = ""
authors = ["seongi.hong <seongi.hong>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
flake8 = "^4.0.1"
PyAutoGUI = "^0.9.53"
selenium = "^4.3.0"
webdriver-manager = "^3.7.1"
PyYAML = ">=6.0"
pyotp = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
